--- a/Lesson01-Favorite-Toys/T01.02-Exercise-DisplayToyList/app/src/main/res/layout/activity_main.xml
+++ b/Lesson01-Favorite-Toys/T01.02-Exercise-DisplayToyList/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,4 +28,5 @@
         android:id="@+id/tv_toy_name"
         android:padding="16dp"
         android:textSize="20sp" />
+    </ScrollView>
 </FrameLayout>
