--- a/Lesson03-Green-Recycler-View/T03.02-Exercise-ViewHolder/app/src/main/res/layout/activity_main.xml
+++ b/Lesson03-Green-Recycler-View/T03.02-Exercise-ViewHolder/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_numbers"
+        android:id="@+id/tv_numbers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </FrameLayout>
